[package]
name = "judge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
seccomp-sys = "*"
tokio = { version = "1", features = ["full"] }
hyper = "*"
anyhow = "*"
uuid = { version = "*", features = ["v4"] }
routerify = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["default", "env-filter"] }
tracing-futures = "*"
chrono="*"
tracing-bunyan-formatter = "*"
async-trait = "*"