[package]
edition = "2018"
name = "judge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
axum = "*"
chrono = "*"
http = "*"
hyper = "*"
libc = "*"
seccomp-sys = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tokio = {version = "1", features = ["full"]}
tower = {version = "*", features = ["full"]}
tower-http = {version = "*", features = ["full"]}
tracing = "*"
tracing-bunyan-formatter = "*"
tracing-futures = "*"
tracing-subscriber = {version = "*", features = ["default", "env-filter"]}
uuid = {version = "*", features = ["v4"]}
